# phonikud-tts-rs

./: .gitignore  Cargo.toml  README.md
examples/: interactive.rs  usage.rs  usage_g2p.rs  usage_g2p_standalone.rs  usage_standalone.rs  usage_tts.rs
src/: g2p.rs  lib.rs  tts.rs
