[package]
name = "phonikud-tts-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
encoding_rs = "0.8"
hound = "3.5.1"
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs", version = "0.1.123" }
ndarray = "0.16.1"
ort = "=2.0.0-rc.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
